[package]
name = "dtxmania-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
async-fs = "2.2.0"
bevy = "0.18"
bevy-inspector-egui = { version = "0.36.0", optional = true }
encoding_rs = "0.8.35"
# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
nom = "8.0.0"
strum = { version = "0.28.0", features = ["derive"] }
tracing = { version = "0.1", features = [
  "max_level_debug",
  "release_max_level_warn",
] }

[features]
dev = ["bevy/dynamic_linking", "bevy/debug", "dep:bevy-inspector-egui"]
default = ["dev"]

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
