[package]
name = "dtxmania-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["WataNekko <88185666+WataNekko@users.noreply.github.com>"]

[workspace]
members = ["crates/utils"]

[workspace.dependencies]
bevy = { version = "0.18", default-features = false }
encoding_rs = "0.8.35"
nom = "8.0.0"

[dependencies]
async-channel = "2.5.0"
async-fs = "2.2.0"
async-lock = "3.4.2"
bevy = { workspace = true, features = [
  "2d_bevy_render",
  "default_app",
  "picking",
  "scene",
  "ui_api",
  "ui_bevy_render",
  "std",
  "android-game-activity",
  "bevy_gilrs",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "webgl2",
  "x11",
  "wayland",
  "sysinfo_plugin",
] }
bevy-inspector-egui = { version = "0.36.0", optional = true }
bevy_egui = { version = "0.39", default-features = false, features = [
  "bevy_ui",
], optional = true }
bevy_seedling = { git = "https://github.com/CorvusPrudens/bevy_seedling", rev = "60eceaf", default-features = false, features = [
  "cpal",
] }
dashmap = "6.1.0"
encoding_rs.workspace = true
ffmpeg-next = "8.1.0"
# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
nom.workspace = true
tracing = { version = "0.1", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
utils = { path = "crates/utils" }

[features]
dev = [
  "bevy/dynamic_linking",
  "bevy/debug",
  "dep:bevy-inspector-egui",
  "dep:bevy_egui",
]
default = ["dev"]

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
